JobPosting public endpoints
